# guesthouse

./: .gitignore  CLAUDE.md  HOWTO.md  README.md  compute_path.py  compute_rect.py  gen_all.py  gen_layout.py  gen_path_svg.py  pyproject.toml  rough_survey.txt  survey.py
.claude/: settings.json  settings.local.json
floorplan/: __init__.py  constants.py  gen_floorplan.py  geometry.py  layout.py  openings.py
hut2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/: __init__.py  geometry.py  survey.py  svg.py  types.py
survey/: adjust_pentagon.py  compute_path.py  distances.md  gen_layout.py  gen_path_svg.py  updated_distances.md
tests/: conftest.py  test_gen_floorplan.py  test_gen_path_svg.py  test_gen_walls.py  test_geometry.py  test_layout.py  test_outline.py  test_survey.py
walls/: constants.py  gen_walls.py
